Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61910

Windows: WebEngine does not respect "Bypass proxy for local addresses"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.2
    • 5.9.1
    • WebEngine
    • None
    • Windows 64

      VS 2015

      Hi,

       

      QWebEngineView & QWebEnginePage do not take proxy settings from Chrome.

      Chrome is configured to use proxy for internet addresses and bypass it for local addresses.

       

      But it does not happen. QWebEngineView fails to load URLs in LAN.

      If Proxy is turned off in Chrome then local addresses would work but internet would fail.

       

      Would really appreciate any insight on this issue.

       

      Regards,

      Sudhir

        For Gerrit Dashboard: QTBUG-61910
        # Subject Branch Project Status CR V

            kkohne Kai Köhne
            sudh Sudhir Sharma
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes